configurations/longhorn/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  parentRefs:
  - name: front-door
    sectionName: https
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - longhorn.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
      weight: 1
      kind: Service
